--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   }
