--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
