--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.204.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -19,6 +20,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.0",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
   }
