--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.204.0",
+    "@aws-sdk/s3-request-presigner": "^3.209.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -22,6 +23,7 @@
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "sharp": "^0.31.2",
     "socket.io": "^4.5.3"
   }
 }
