--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "tinder",
 	"version": "0.1.0",
+	"proxy": "https://paires-test-server.onrender.com",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.10.4",
