--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
-  "dependencies": {
-    "browser-image-compression": "^2.0.0"
-  }
+	"name": "tinder",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node backend/server",
+		"server": "nodemon backend/index",
+		"client": "npm start --prefix frontend",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/likuor/tinder.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/likuor/tinder/issues"
+	},
+	"homepage": "https://github.com/likuor/tinder#readme",
+	"dependencies": {
+		"concurrently": "^7.6.0"
+	}
 }
