--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node backend/server",
-		"server": "nodemon backend/index",
+		"start": "nodemon backend/index",
 		"client": "npm start --prefix frontend",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
+		"dev": "concurrently \"npm run start\" \"npm run client\""
 	},
 	"repository": {
 		"type": "git",
